@@ -1,5 +1,4 @@
-<!-- start of $Id: html_inbox.php,v 1.37 2002/04/19 23:34:19 mrylander Exp $ -->
-<?php global $PHP_SELF ?>
+<!-- start of $Id: html_inbox.php,v 1.38 2002/04/24 22:58:34 rossigee Exp $ -->
 <tr bgcolor="<?php echo $glob_theme->inbox_color ?>">
     <td align="center">
         <input type="checkbox" name="msg-<?php echo $tmp['number'] ?>" value="Y" />
@@ -13,10 +12,10 @@
         <?php echo $tmp['attach'] ?>
     </td>
     <td class="inbox" align="left">
-        <a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;folder=<?php echo $folder ?>" title="<?php echo htmlspecialchars($tmp['from']); ?>"><?php echo htmlspecialchars(display_address ($tmp['from'])); ?></a>
+        <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;folder=<?php echo $folder ?>" title="<?php echo htmlspecialchars($tmp['from']); ?>"><?php echo htmlspecialchars(display_address ($tmp['from'])); ?></a>
     </td>
     <td class="inbox" align="left">
-        <a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;folder=<?php echo $folder ?>" title="<?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?>"><?php echo $tmp['subject']? substr(htmlspecialchars($tmp['subject']), 0, 55) : $html_nosubject; ?></a>
+        <a href="<?php echo $_SERVER['PHP_SELF'] ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;verbose=0&amp;folder=<?php echo $folder ?>" title="<?php echo $tmp['subject']? htmlspecialchars($tmp['subject']) : $html_nosubject; ?>"><?php echo $tmp['subject']? substr(htmlspecialchars($tmp['subject']), 0, 55) : $html_nosubject; ?></a>
     </td>
     <td class="inbox" align="left">
         <?php echo $tmp['date'] ?>
@@ -26,4 +25,4 @@
         <?php echo $tmp['size'] ?> <?php echo $html_kb ?>
     </td>
 </tr>
-<!-- end of $Id: html_inbox.php,v 1.37 2002/04/19 23:34:19 mrylander Exp $ -->
+<!-- end of $Id: html_inbox.php,v 1.38 2002/04/24 22:58:34 rossigee Exp $ -->
