@@ -1,9 +1,9 @@
-<!-- start of $Id: send_confirmed.php,v 1.3 2001/11/28 14:54:51 rossigee Exp $ -->
+<!-- start of $Id: send_confirmed.php,v 1.4 2001/12/19 21:13:52 nicocha Exp $ -->
 <p class="inbox">
  <?php echo $html_send_confirmed; ?>
 </p>
 
 <p class="inbox">
- <a href="<?php echo $PHP_SELF ?>?action.php"><?php echo $html_return_to_inbox; ?></a>
+ <a href="<?php echo $_SERVER['PHP_SELF'] ?>"><?php echo $html_return_to_inbox; ?></a>
 </p>
-<!-- end of $Id: send_confirmed.php,v 1.3 2001/11/28 14:54:51 rossigee Exp $ -->
+<!-- end of $Id: send_confirmed.php,v 1.4 2001/12/19 21:13:52 nicocha Exp $ -->
